Gaurav-AWS-Playlist-with-Terraform/nlb/security_group.tf
resource "aws_security_group" "nlb" {
  name = "nlb-sg"
  description = "Allow TCP 80 to NLB"
  vpc_id = data.aws_vpc.default.id
  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "nlb-sg"
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "instances" {
  name        = "nlb-instances-sg"
  description = "Allow TCP 80 only from NLB"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.nlb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "nlb-instances-sg" }
}
